Fixed routing bug in list items

--- a/web-client/src/app/blog/blog-list/blog-list.component.html
+++ b/web-client/src/app/blog/blog-list/blog-list.component.html
@@ -1,5 +1,5 @@
 <div class="row ">
-  <div class="well scrollable top-buffer">
+  <div class="scrollable top-buffer">
     <div
       *ngFor="let entry of blogService.getBlogEntryHeaders() | async"
       class="row">
@@ -9,3 +9,4 @@
     </div>
   </div>
 </div>
+
