--- a/web-client/src/app/blog/blog-list/blog-list-item/blog-list-item.component.html
+++ b/web-client/src/app/blog/blog-list/blog-list-item/blog-list-item.component.html
@@ -1,4 +1,7 @@
-<a style="cursor: pointer" class="list-group-item clearfix native-deal-item">
+<a
+  style="cursor: pointer"
+  class="list-group-item clearfix native-deal-item"
+  [routerLink]="[blogEntryHeader.id]">
   <div class="pull-left">
     <h4 class="list-group-item-heading" id="itemOrderID">{{ blogEntryHeader.title}}</h4>
     <p class="list-group-item-text">{{blogEntryHeader.updated}}</p>
