--- a/web-client/src/app/blog/blog.component.html
+++ b/web-client/src/app/blog/blog.component.html
@@ -1,3 +1,4 @@
 <div class="row">
   <div class="col-md-3"><app-blog-list></app-blog-list></div>
+  <div class="col-md-9"><router-outlet></router-outlet></div>
 </div>
