--- a/web-client/src/app/blog/blog.component.html
+++ b/web-client/src/app/blog/blog.component.html
@@ -1,4 +1,11 @@
 <div class="row">
+  <div class="col-md-1 col-md-offset-11">
+    <a href="#" data-toggle="tooltip" title="New Entry">
+      <span class="glyphicon glyphicon-plus-sign glyphicon-align-right"></span>
+    </a>
+  </div>
+</div>
+<div class="row">
   <div class="col-md-3"><app-blog-list></app-blog-list></div>
   <div class="col-md-9"><router-outlet></router-outlet></div>
 </div>
