--- a/web-client/src/app/header/tabs/tabs.component.html
+++ b/web-client/src/app/header/tabs/tabs.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a routerLink="#" class="navbar-brand">LGW</a>
+      <a routerLink="#" class="navbar-brand">
+        <span class="glyphicon glyphicon-home"></span>
+      </a>
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav">
