--- a/web-client/src/app/blog/blog.component.html
+++ b/web-client/src/app/blog/blog.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-1 col-md-offset-11">
-    <a href="#" data-toggle="tooltip" title="New Entry">
+    <a href="#" data-toggle="tooltip" title="New Entry" [routerLink]="['new']">
       <span class="glyphicon glyphicon-plus-sign glyphicon-align-right"></span>
     </a>
   </div>
