Creates a blog entry

--- a/web-client/src/app/blog/blog-entry-new/blog-entry-new.component.html
+++ b/web-client/src/app/blog/blog-entry-new/blog-entry-new.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-md-8">
     <form [formGroup]="newBlogEntryFormGroup" (ngSubmit)="onSubmit()">
-      <button class="btn btn-primary" type="submit">Create</button>
+      <button class="btn btn-primary" id="create-entry-button">Create</button>
       <hr>
       <div class="form-group">
         <label for="title">Title</label>
