--- a/web-client/src/app/blog/blog-list/blog-list-item/blog-list-item.component.html
+++ b/web-client/src/app/blog/blog-list/blog-list-item/blog-list-item.component.html
@@ -4,6 +4,6 @@
   [routerLink]="[blogEntryHeader.id]">
   <div class="pull-left">
     <h4 class="list-group-item-heading" id="itemOrderID">{{ blogEntryHeader.title}}</h4>
-    <p class="list-group-item-text">{{blogEntryHeader.published}}</p>
+    <p class="list-group-item-text">{{blogEntryHeader.firstPublished}}</p>
   </div>
 </a>
