Better home page

--- a/web-client/src/app/home/home.component.html
+++ b/web-client/src/app/home/home.component.html
@@ -1,3 +1,23 @@
-<p>
-  home works!
-</p>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <p>
+      Have you ever come across a pull request or code review where the developer has put together a mini framework that
+      might be tending towards over engineering? Or maybe there is a new utility for performing a task that you know
+      there is a perfectly good library for?
+    </p>
+    <p>
+      Maybe it is you who does this and submits the pull request?
+    </p>
+    <p>
+      The feedback given/received is most likely some paraphrasing of the well known wisdom; "Do not reinvent the wheel!"
+    </p>
+    <p>
+      Well, if the person submitting those PR's is you, and you are itching to try and solve problems that other people
+      have probably solved a thousand times already, and probably a thousand times better than you could solve it
+      anyway, then you have come to the right place my friend. Gonzo Code is here for you.
+    </p>
+  </div>
+  <div class="col-md-10 col-md-offset-1">"Never create anything, it will be misinterpreted, it will chain you and follow you for
+    the rest of your life.” - HST
+  </div>
+</div>
