--- a/web-client/src/app/header/title/title.component.css
+++ b/web-client/src/app/header/title/title.component.css
@@ -6,3 +6,11 @@
   font-size: 40px;
   text-align: center;
 }
+.subtitle{
+  background-color: black;
+  color: azure;
+  width: 100%;
+  height: 3%;
+  font-size: 20px;
+  text-align: center;
+}
