Laying out skeleton of creating new entry

--- a/vue-client/src/gonzo_style.scss
+++ b/vue-client/src/gonzo_style.scss
@@ -85,3 +85,13 @@ $color-red: #f44265;
 .failure-message {
   color: $color-red;
 }
+
+input {
+  background-color: $color-medium-dark;
+  color: $color-white;
+  width: 100%;
+}
+
+textarea {
+  @extend input
+}
