--- a/vue-client/src/gonzo_style.scss
+++ b/vue-client/src/gonzo_style.scss
@@ -117,6 +117,22 @@ $color-red: #f44265;
   color: $color-red;
 }
 
+.vertical-scroll {
+  overflow-y: scroll;
+}
+
+-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #D62929;
+}
+
+-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
 input {
   background-color: $color-medium-dark;
   color: $color-white;
